<resources>
    <string name="app_name">MyChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="don_t_have_an_account">don\'t have an account ?</string>
    <string name="register"><u>Register</u></string>
    <string name="type_a_message">Type a message</string>
    <string name="add_a_caption">add a caption</string>
    <string name="finger_print_authentication">Finger print authentication</string>
</resources>